--- a/css/layout.css
+++ b/css/layout.css
@@ -19,7 +19,7 @@ html {
   width: 100%;
   display: grid; 
   grid-template-columns: 1fr; 
-  grid-template-rows: 50px 2fr 50px; 
+  grid-template-rows: 100px 2fr 100px; 
   gap: 0px 0px; 
   grid-template-areas: 
     "top-nav"
@@ -43,6 +43,11 @@ html {
   padding: 10px;
   text-align: center;
 }
+
+.top-nav>img {
+  width: 50px;
+  height: 50px;
+  }
 
 .work {
   margin-left:auto;
