--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,10 @@ ul {
 /* Page & Containers */
 
 html {
-  background-color: #f2f3f4;
+  /* background-color: #f2f3f4; */
+  background-image: url(../images/stripes_green.svg);
+  background-repeat: repeat;
+  background-attachment: fixed;
 }
 
 .container {
