--- a/css/style.css
+++ b/css/style.css
@@ -14,6 +14,7 @@ html {
   background-image: url(../images/stripes_green.svg);
   background-repeat: repeat;
   background-attachment: fixed;
+  display:block;
 }
 
 .container {
