--- a/css/style.css
+++ b/css/style.css
@@ -45,10 +45,26 @@ h3 {
   font-weight: bold;
 }
 
+h4 {
+  font-family: 'Playfair Display', serif;
+  font-size: 16px;
+  font-weight: bold;
+}
+
+h5 {
+  font-family: 'Playfair Display', serif;
+  font-size: 16px;
+  font-style: italic;
+}
+
 p {
   font-family: 'Mulish', sans-serif;
   font-size: 16px;
   line-height: 1.5em;
+}
+
+.indent {
+  padding-left: 2em;
 }
 
 .nav {
@@ -70,9 +86,10 @@ p {
   color: #007474;
 }
 
-.project>p {
+.project>h3 {
   font-family: 'Playfair Display', serif;
   font-size: 16px;
+  text-align: center;
 }
 
 .project-card>a {
@@ -113,7 +130,6 @@ p {
   font-size: 16px;
   line-height: 1.5em;
   color: #3e3e3e74;
-
 }
 
 button {
