--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
   color: #3e3e3e;
 }
 
-ul {
+.social-links {
   list-style: none;
 }
 
@@ -41,7 +41,7 @@ h2 {
 
 h3 {
   font-family: 'Playfair Display', serif;
-  font-size: 16px;
+  font-size: 18px;
   font-weight: bold;
 }
 
@@ -57,10 +57,26 @@ h5 {
   font-style: italic;
 }
 
-p {
+p, li {
   font-family: 'Mulish', sans-serif;
   font-size: 16px;
   line-height: 1.5em;
+}
+
+.link {
+  font-family: 'Mulish', sans-serif;
+  font-size: 16px;
+  line-height: 1.5em;
+  color: #007474;
+  text-decoration: none;
+}
+
+.link:hover {
+  text-decoration: underline;
+}
+
+.link:hover {
+  cursor: pointer;
 }
 
 .indent {
