--- a/css/base.css
+++ b/css/base.css
@@ -103,9 +103,14 @@ section {
   gap: 24px;
 }
 
+.image_title {
+  width: 360px;
+  height: 280px;
+}
+
 .image_title a {
   width: 100%;
-  max-width: 360px;
+  text-decoration: none;
 
   display: flex;
   flex-flow: column nowrap;
@@ -113,12 +118,14 @@ section {
   gap: 8px;
 }
 
-.image_title a:hover {
+.image_title a:hover * {
+  color: #941487;
   padding: 3px;
 }
 
 .image_title img {
   max-width: 360px;
+  max-height: 240px;
 }
 
 .link_icon {
@@ -126,7 +133,6 @@ section {
 }
 
 .link_icon a {
-
   display: flex;
   flex-flow: row nowrap;
   justify-content: center;
@@ -317,6 +323,7 @@ nav a {
   font-size: 24px;
   font-weight: 500;
   color: #941487;
+  text-decoration: none;
 }
 
 nav a:hover {
