--- a/css/base.css
+++ b/css/base.css
@@ -119,7 +119,7 @@ section {
 }
 
 .image_title a:hover * {
-  color: #941487;
+  color: #1F9EC7;
   padding: 3px;
 }
 
@@ -144,11 +144,23 @@ section {
   text-decoration: none;
 }
 
-.link_icon a .center {
+.link_icon a[class="center"] {
   justify-content: center;
 }
 
 .link_icon img {
+  width: 24px;
+}
+
+.icon_text {
+  width: 100%;
+  display: flex;
+  flex-flow: row nowrap;
+  align-items: center;
+  gap: 8px;
+}
+
+.icon_text img {
   width: 24px;
 }
 
@@ -238,6 +250,8 @@ article {
 .img {
   min-width: 272px;
   width: 100%;
+  margin-top: 16px;
+  margin-bottom: 16px;
 }
 
 .landscape {
@@ -250,6 +264,7 @@ article {
 
 .square {
   max-width: 360px;
+  border-radius: 24px;
 }
 
 .tri-image-display {
@@ -314,7 +329,7 @@ h3 {
 
 .body-regular {
   font-size: 20px;
-  font-weight: 400;
+  font-weight: 300;
 }
 
 figcaption {
@@ -327,23 +342,27 @@ figcaption {
 nav a {
   font-size: 24px;
   font-weight: 500;
-  color: #941487;
+  color: #1F9EC7;
   text-decoration: none;
 }
 
 nav a:hover {
   font-size: 24px;
   font-weight: 500;
-  color: #303030;
+  color: #941487;
 }
 
 nav a:active {
   font-size: 24px;
   font-weight: 500;
-  color: #303030;
+  color: #941487;
 }
 
 a {
+  color: #1F9EC7;
+}
+
+a:hover {
   color: #941487;
 }
 
