--- a/css/base.css
+++ b/css/base.css
@@ -10,6 +10,11 @@ body * {
   box-sizing: border-box;
 }
 
+body p,
+li {
+  line-height: 1.5em;
+}
+
 .outtie {
   min-height: 100%;
   padding: 48px 24px;
