--- a/css/base.css
+++ b/css/base.css
@@ -137,6 +137,7 @@ section {
   min-width: 272px;
   max-width: 360px;
   max-height: 240px;
+  box-shadow: 2px 2px 4px #9e9e9e;
 }
 
 .link_icon {
@@ -296,6 +297,14 @@ article {
 .tri-image-display figcaption {
   width: 100%;
   max-width: 360px;
+}
+
+.slide-display {
+  width: 100%;
+}
+
+.slide-display img {
+  box-shadow: 2px 2px 4px #9e9e9e;
 }
 
 /* Texture */
